# kgGraphwithSearch

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  KNOWLEDGE_GRAPH_ENHANCEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  README.md  REFACTOR_SUMMARY.md  STREAM_4_SUMMARY.md  TEST_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  test_async_refactor.py  test_enrichment.py  test_server.sh
.claude/: settings.local.json
docs/: CLUSTERING.md
examples/: clustering_example.py  neo4j_example.py  simple_example.py  start_server.py  test_enrichment.py  test_graph_endpoint.py
extension/: CONFIGURATION.md  README.md  background.js  config.js  content.js  manifest.json
extension/graph/: graph.css  graph.html  graph.js
extension/popup/: popup.css  popup.html  popup.js
notebooks/: example_usage.ipynb
src/kg_graph_search/: __init__.py  config.py
src/kg_graph_search/agents/: __init__.py  entity_enricher.py  entity_extractor.py  gemini_metadata_provider.py  metadata_provider.py  models.py  tab_clusterer.py  tab_summarizer.py  you_metadata_provider.py
src/kg_graph_search/graph/: __init__.py  base.py  database.py  models.py  neo4j_store.py
src/kg_graph_search/search/: __init__.py  you_client.py
src/kg_graph_search/server/: __init__.py  app.py  models.py
tests/: __init__.py  test_clustering.py
tests/backend/: conftest.py  test_api_endpoints.py
